--- a/studio1/css/style.css
+++ b/studio1/css/style.css
@@ -9,6 +9,7 @@
 
 a {
     text-decoration: none !important;
+    color: #1D1D1D;
 }
 
 body {
@@ -27,7 +28,6 @@ body {
 
 .top {
     opacity: 1;
-    height: 100vh;
 }
 
 html {
@@ -76,7 +76,6 @@ body {
 .main-content {
     padding-top: 150px;
     padding-bottom: 60px;
-    height: 100vh;
     position: relative;
 }
 
