--- a/blog/blogstyle.css
+++ b/blog/blogstyle.css
@@ -89,7 +89,7 @@ header.header nav.nav ul li {
     box-shadow: 0 1px 4px rgba(0, 0, 0, .04);
     border: 1px solid rgba(0, 0, 0, .09);
     border-radius: 3px;
-    height: 150px;
+    height: 100%;
     padding: 10px 20px;
 }
 
@@ -105,8 +105,20 @@ header.header nav.nav ul li {
 }
 
 .post-content p {
+    margin-top: 15px;
+    margin-bottom: 10px;
     font-size: 9pt;
     color: darkgray;
+}
+
+.post-content img {
+    margin-top: 15px;
+}
+
+.clear:after {
+    content: "";
+    clear: both;
+    display: table;
 }
 
 
